--- a/build.yaml
+++ b/build.yaml
@@ -1,8 +1,8 @@
 ---
 include:
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: helix_left nice_view_adapter nice_view
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: helix_right nice_view_adapter nice_view
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: settings_reset
