--- a/config/helix-layouts.dtsi
+++ b/config/helix-layouts.dtsi
@@ -51,16 +51,14 @@
             , <&key_physical_attrs 100 100 1100  200       0     0     0>
             , <&key_physical_attrs 100 100 1200  200       0     0     0>
 
-            // Row 3 - Left side (with extra thumb key)
+            // Row 3 - Left side
             , <&key_physical_attrs 100 100    0  300       0     0     0>
             , <&key_physical_attrs 100 100  100  300       0     0     0>
             , <&key_physical_attrs 100 100  200  300       0     0     0>
             , <&key_physical_attrs 100 100  300  300       0     0     0>
             , <&key_physical_attrs 100 100  400  300       0     0     0>
             , <&key_physical_attrs 100 100  500  300       0     0     0>
-            , <&key_physical_attrs 100 100  600  300       0     0     0>
-            // Row 3 - Right side (with extra thumb key)
-            , <&key_physical_attrs 100 100  600  300       0     0     0>
+            // Row 3 - Right side
             , <&key_physical_attrs 100 100  700  300       0     0     0>
             , <&key_physical_attrs 100 100  800  300       0     0     0>
             , <&key_physical_attrs 100 100  900  300       0     0     0>
@@ -68,7 +66,7 @@
             , <&key_physical_attrs 100 100 1100  300       0     0     0>
             , <&key_physical_attrs 100 100 1200  300       0     0     0>
 
-            // Row 4 - Left side (with extra thumb key)
+            // Row 4 - Left side thumb cluster
             , <&key_physical_attrs 100 100    0  400       0     0     0>
             , <&key_physical_attrs 100 100  100  400       0     0     0>
             , <&key_physical_attrs 100 100  200  400       0     0     0>
@@ -76,14 +74,14 @@
             , <&key_physical_attrs 100 100  400  400       0     0     0>
             , <&key_physical_attrs 100 100  500  400       0     0     0>
             , <&key_physical_attrs 100 100  600  400       0     0     0>
-            // Row 4 - Right side (with extra thumb key)
-            , <&key_physical_attrs 100 100  600  400       0     0     0>
+            // Row 4 - Right side thumb cluster
             , <&key_physical_attrs 100 100  700  400       0     0     0>
             , <&key_physical_attrs 100 100  800  400       0     0     0>
             , <&key_physical_attrs 100 100  900  400       0     0     0>
             , <&key_physical_attrs 100 100 1000  400       0     0     0>
             , <&key_physical_attrs 100 100 1100  400       0     0     0>
             , <&key_physical_attrs 100 100 1200  400       0     0     0>
+            , <&key_physical_attrs 100 100 1300  400       0     0     0>
             ;
     };
 };
