--- a/config/helix.conf
+++ b/config/helix.conf
@@ -4,6 +4,9 @@
 # Add custom name to keyboard
 CONFIG_ZMK_KEYBOARD_NAME="felix"
 
+# Enable ZMK Studio
+CONFIG_ZMK_STUDIO=y
+
 # Enable nice!view
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
