--- a/boards/shields/felix/felix.dtsi
+++ b/boards/shields/felix/felix.dtsi
@@ -7,7 +7,7 @@
 #include <dt-bindings/zmk/matrix_transform.h>
 
 
-#include "helix-layouts.dtsi"
+#include "felix-layouts.dtsi"
 
 / {
     // model = "Felix";
@@ -15,7 +15,7 @@
     chosen {
         zmk,kscan = &kscan0;
         // zmk,matrix-transform = &default_transform;
-        zmk,physical-layout = &helix_layout;
+        zmk,physical-layout = &felix_layout;
     };
 
     kscan0: kscan {
