--- a/boards/shields/felix/felix.zmk.yml
+++ b/boards/shields/felix/felix.zmk.yml
@@ -1,6 +1,6 @@
 file_format: "1"
-id: helix
-name: Helix
+id: felix
+name: Felix
 type: shield
 url: https://github.com/MakotoKurauchi/helix
 requires: [pro_micro]
@@ -10,5 +10,5 @@ features:
   - display
   - studio
 siblings:
-  - helix_left
-  - helix_right
+  - felix_left
+  - felix_right
