--- a/build.yaml
+++ b/build.yaml
@@ -1,10 +1,10 @@
 ---
 include:
   - board: nice_nano
-    shield: felix_left nice_view_adapter nice_view
+    shield: helix_left nice_view_adapter nice_view
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
   - board: nice_nano
-    shield: felix_right nice_view_adapter nice_view
+    shield: helix_right nice_view_adapter nice_view
   - board: nice_nano
     shield: settings_reset
