--- a/config/boards/shields/felix/felix-layouts.dtsi
+++ b/config/boards/shields/felix/felix-layouts.dtsi
@@ -58,7 +58,9 @@
             , <&key_physical_attrs 100 100  300  300       0     0     0>
             , <&key_physical_attrs 100 100  400  300       0     0     0>
             , <&key_physical_attrs 100 100  500  300       0     0     0>
+            , <&key_physical_attrs 100 100  600  300       0     0     0>
             // Row 3 - Right side
+            , <&key_physical_attrs 100 100  800  300       0     0     0>
             , <&key_physical_attrs 100 100  900  300       0     0     0>
             , <&key_physical_attrs 100 100 1000  300       0     0     0>
             , <&key_physical_attrs 100 100 1100  300       0     0     0>
