--- a/config/felix.conf
+++ b/config/felix.conf
@@ -7,6 +7,9 @@ CONFIG_ZMK_KEYBOARD_NAME="felix"
 # Enable ZMK Studio
 CONFIG_ZMK_STUDIO=y
 
+# mouse emulation
+CONFIG_ZMK_POINTING=y
+
 # Enable nice!view
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
