--- a/config/felix.conf
+++ b/config/felix.conf
@@ -23,3 +23,7 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 
 # Boost the Bluetooth signal only if having connection issues
 # CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Deep sleep after 2 hours of inactivity (7200000ms)
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=7200000
